# eyecandy

./: .gitignore  Cargo.toml
src/: animation.rs  control.rs  demo.rs  lib.rs  rubik.rs  wasm.rs
src/rubik/: geometry.rs  graphics.rs  rubik.frag
src/wasm/: window.rs
